sass/yofisio/components/facilities.sass
figure.wp-caption
  position: relative
  img
    margin: 0
  &::after
    transition: all .5s
    content: " "
    position: absolute
    bottom: 0
    right: 0
    left: 0
    top: 0
    background: -moz-linear-gradient(bottom, rgba($brand-info,0.9) 0%, rgba($brand-info,0.6) 50%, rgba($brand-info,0.5) 100%)
    background: -webkit-linear-gradient(bottom, rgba($brand-info,0.9) 0%,rgba($brand-info,0.6) 50%,rgba($brand-info,0.5) 100%)
    background: linear-gradient(to top, rgba($brand-info,0.9) 0%,rgba($brand-info,0.6) 50%,rgba($brand-info,0.5) 100%)
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2288ca80', endColorstr='#2288caE6',GradientType=0 )
    z-index: 10
    opacity: 0
  figcaption.wp-caption-text
    position: absolute
    bottom: 0
    right: 0
    left: 0
    margin-bottom: 1rem
    color: #fff
    font-size: 1.25rem
    opacity: 0
    z-index: 15

  &:hover
    &::after
      opacity: 1
    figcaption.wp-caption-text
      opacity: 1

